Update all buttons to brand color #7E0806

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,8 @@
     --foreground: 0 0 0;
     /* #000000 Black */
 
-    --primary: 114 14 30;
-    /* #720e1e Deep Bakery Maroon */
+    --primary: 126 8 6;
+    /* #7E0806 Deep Brand Red */
     --primary-foreground: 255 255 255;
 
     --secondary: 245 245 220;
